--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@mui/material": "^5.12.2",
     "@mui/x-date-pickers": "^6.3.0",
     "@types/geojson": "^7946.0.10",
+    "@types/leaflet-routing-machine": "^3.2.4",
     "@types/node": "18.16.2",
-    "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.7",
@@ -27,6 +27,7 @@
     "faunadb": "^4.8.0",
     "leaflet": "^1.9.3",
     "leaflet-defaulticon-compatibility": "^0.1.1",
+    "leaflet-routing-machine": "^3.2.12",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "^18.2.0",
@@ -37,7 +38,9 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
+    "@material-ui/types": "^5.1.0",
     "@types/leaflet": "^1.9.3",
+    "@types/react": "^18.2.1",
     "@types/react-leaflet": "^3.0.0"
   }
 }
