--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "GeoMedical",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,12 +14,14 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.2",
+    "@mui/material": "^5.12.3",
+    "@mui/utils": "^5.12.3",
     "@mui/x-date-pickers": "^6.3.0",
     "@types/geojson": "^7946.0.10",
     "@types/leaflet-routing-machine": "^3.2.4",
     "@types/node": "18.16.2",
     "@types/react-dom": "18.2.1",
+    "@types/react-transition-group": "^4.4.5",
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.7",
     "eslint": "8.39.0",
@@ -38,9 +40,9 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.0",
-    "@material-ui/types": "^5.1.0",
     "@types/leaflet": "^1.9.3",
-    "@types/react": "^18.2.1",
+    "@types/material-ui": "^0.21.12",
+    "@types/react": "^18.2.4",
     "@types/react-leaflet": "^3.0.0"
   }
 }
